# backend/docs/swagger.json
@@ -399,6 +399,12 @@
         "project": {
           "type": "string"
         },
+        "start": {
+          "type": "string"
+        },
+        "end": {
+          "type": "string"
+        },
         "tags": {
           "type": "array",
           "items": {
@@ -476,6 +482,12 @@
         "taskid": {
           "type": "string"
         }
+        "start": {
+          "type": "string"
+        },
+        "end": {
+          "type": "string"
+        }
       }
     },
     "models.ModifyTaskRequestBody": {
@@ -512,6 +524,13 @@
           }
         },
         "taskid": {
+          "type": "string"
+        }
+        ,
+        "start": {
+          "type": "string"
+        },
+        "end": {
           "type": "string"
         }
       }
